--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -1020,8 +1020,8 @@ may suppress warnings from the stub parser.
 \end{alltt}
 
 \noindent
-Then, in addition to the instructions above, use the release version output by running \<./gradlew version>
-as the version number for the Checker Framework artifacts.
+Use the instructions above, but modify the version number for the Checker Framework artifacts.
+Use the version number that is output when you run \<./gradlew version>.
 
 \end{enumerate}
 
