--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -1012,18 +1012,22 @@ Warning:  adding
 \noindent
 may suppress warnings from the stub parser.
 
+\end{enumerate}
 
-\item To use a locally-modified version of the Checker Framework, first run:
+
+\subsectionAndLabel{Maven, with a locally-modified version of the Checker Framework}{maven-local-modifications}
+
+To use a locally-modified version of the Checker Framework, first run:
 
 \begin{alltt}
 ./gradlew deployArtifactsToLocalRepo
 \end{alltt}
 
 \noindent
-Use the instructions above, but modify the version number for the Checker Framework artifacts.
-Use the version number that is output when you run \<./gradlew version>.
+Then use the Maven instructions, but modify the version number for the
+Checker Framework artifacts.  Instead of \<\ReleaseVersion{}>, use the
+version number that is output when you run \<./gradlew version>.
 
-\end{enumerate}
 
 \sectionAndLabel{NetBeans}{netbeans}
 
