--- a/docs/manual/nullness-checker.tex
+++ b/docs/manual/nullness-checker.tex
@@ -2010,7 +2010,7 @@ enhancements.  For example, it supports partial initialization (the
 argument to the \<@UnknownInitialization> and \<@UnderInitialization>
 annotations).  The benefit (in terms of reduced false positive
 initialization warnings) from supporting partial initialization is
-greater that the benefit from adopting the Freedom Before Commitment system.
+greater than the benefit from adopting the Freedom Before Commitment system.
 
 
 
