--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+Version 3.3.1, May 1, 2020
+
+The Returns Receiver Checker verifies whether a method returns its
+receiver, that is, `this`.
+
 ---------------------------------------------------------------------------
 
 Version 3.3.0, April 1, 2020
