Fix spelling errors

--- a/docs/manual/nullness-checker.tex
+++ b/docs/manual/nullness-checker.tex
@@ -2034,10 +2034,11 @@ greater than the benefit from adopting the Freedom Before Commitment system.
 % LocalWords:  NullnessChecker redundantNullComparison instanceof runtime
 % LocalWords:  noInitForMonotonicNonNull UnknownInitialization isArray
 % LocalWords:  UnderInitialization getComponentType AsuppressWarnings
-% LocalWords:  isEmpty AssumeAssertion cleanroom varargs OtherClass
+% LocalWords:  isEmpty AssumeAssertion cleanroom varargs OtherClass Astubs
 % LocalWords:  mymap mykey KeyType ValueType lineSeparator receiver''
-% LocalWords:  dereferenced dereference Dereferencing initializers
+% LocalWords:  dereferenced dereference Dereferencing initializers astub
 % LocalWords:  initHelper helperMethod NoSuchElementException classpath
 % LocalWords:  soundArrayCreationNullness lombok findbugs CurrentClass
-% LocalWords:  NotOnlyInitialized underinitialization Commitment''
-% LocalWords:  unclassified''
+% LocalWords:  NotOnlyInitialized underinitialization Commitment'' toarray
+% LocalWords:  unclassified'' trustArrayLenZero ArrayLen toArray
+% LocalWords:  ConcurrentHashMap
