--- a/docs/manual/lock-checker.tex
+++ b/docs/manual/lock-checker.tex
@@ -993,4 +993,4 @@ These features are supported by
 %  LocalWords:  MayReleaseLocks GuardedByName lock2 jls JLS LockHeld intra
 %  LocalWords:  LockPossiblyHeld explicitLock isHeldByCurrentThread JCIP's
 %  LocalWords:  holdsLock monitorLock cleanroom AconcurrentSemantics jcip
-% LocalWords:  guardedby ensureslockheld lockingfree runtime
+% LocalWords:  guardedby ensureslockheld lockingfree runtime nondecreasing
