Reduce number of references to FBC

--- a/docs/manual/nullness-checker.tex
+++ b/docs/manual/nullness-checker.tex
@@ -2003,7 +2003,7 @@ see Section~\ref{nullness-method-annotations}.
 
 \paragraphAndLabel{Source of the type system}{initialization-checking-type-system}
 
-The type system enforced by the Initialization Checker is known as
+The type system enforced by the Initialization Checker is based on
 ``Freedom Before Commitment''~\cite{SummersM2011}.  Our implementation
 changes its initialization modifiers (``committed'', ``free'', and
 ``unclassified'') to ``initialized'', ``unknown initialization'', and
