Add comment explaining `<fork>true</fork>`

--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -544,8 +544,8 @@ javac \
 Below is an explanation of each argument.
 \begin{enumerate}
 \item \<-J-Xbootclasspath/p:\$CHECKERFRAMEWORK/checker/dist/javac.jar>:
-even when running under JDK 8, a Java 9 compiler (either the Error Prone
-compiler or the OpenJDK Java 9 compiler) must be on the JVM bootclasspath.
+even when running under JDK 8, a Java 9+ compiler (either the Error Prone
+compiler or the OpenJDK Java compiler (version 9 or later) must be on the JVM bootclasspath.
 The \<-J> indicates that this is a JVM argument rather than a compiler
 argument.
 
@@ -951,7 +951,7 @@ For example, to use the \code{org.checkerframework.checker.nullness.NullnessChec
     <artifactId>maven-compiler-plugin</artifactId>
     <version>3.8.1</version>
     <configuration>
-      <fork>true</fork>
+      <fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
       <!-- If using JDK 8, add source and target. -->
       <source>1.8</source>
       <target>1.8</target>
