Remove incorrect sentence

--- a/docs/manual/creating-a-checker.tex
+++ b/docs/manual/creating-a-checker.tex
@@ -1772,7 +1772,7 @@ large codebase without being inundated in stack traces.
   stylized format that is easy for tools to parse.  This is useful for
   tools that run the Checker Framework and parse its output, such as IDE
   plugins.  See the source code of \<SourceChecker.java> for details about
-  the format.  This is now deprecated, given the existence of JSON output.
+  the format.
 
 \end{itemize}
 
