Add explanation of com.google.errorprone~javac artifact

--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -905,6 +905,9 @@ latest bug fixes and new features:
   mvn versions:use-latest-versions -Dincludes="org.checkerframework:*"
 \end{Verbatim}
 
+The need for the \<com.google.errorprone:javac> artifact when running under
+JDK 8 is explained in Section~\ref{java8-install}.
+
 \end{enumerate}
 
 \item If using JDK 8, use Maven properties to hold the locations of the
