--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -576,6 +576,15 @@ checkers support the following command-line options.
 Each checker may support additional command-line options; see the checker's
 documentation.
 
+It can sometimes be necessary to pass options to only a particular checker.
+To achieve this, an option can be prefixed either with the canonical or simple name
+of a checker, separated by an underscore ``\<\_>''.
+Such an option will apply only to a checker with that name or any subclass of that checker.
+For example, you can use\\
+\hspace*{1cm}\<-ANullnessChecker\_lint=redundantNullComparison>\\
+\hspace*{1cm}\<-Aorg.checkerframework.checker.guieffect.GuiEffectChecker\_lint=debugSpew>\\
+to pass different lint options to the Nullness and GUI Effect Checkers.
+
 % This list should be kept in sync with file
 % framework/src/main/java/org/checkerframework/framework/source/SourceChecker.java
 
