--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -576,8 +576,8 @@ checkers support the following command-line options.
 Each checker may support additional command-line options; see the checker's
 documentation.
 
-To pass an options to only a particular checker,
-prefix the opetion with the canonical or simple name
+To pass an option to only a particular checker,
+prefix the option with the canonical or simple name
 of a checker, separated by an underscore ``\<\_>''.
 Such an option will apply only to a checker with that name or any subclass of that checker.
 For example, you can use
