changed language requirement

--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -728,7 +728,7 @@ to run a checker within IntelliJ IDEA on every compile:
 \item Change the project SDK to 11, as explained at
   \url{https://www.jetbrains.com/help/idea/sdk.html#change-project-sdk}.
 
-\item Make sure the language level for your project is 11 (after the last step, it should show up as your SDK default), as explained at
+\item Make sure the language level for your project is 8 or higher, as explained at
 \url{https://www.jetbrains.com/help/idea/project-page.html}.
 
 \item Add the annotated JDK library to the bootclasspath.
