IntelliJ requires use of JDK 11 (#3214)
This fixes #3201.

--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -725,10 +725,10 @@ to run a checker within IntelliJ IDEA on every compile:
 
 \begin{enumerate}
 
-\item Change the project SDK to 1.8, as explained at
+\item Change the project SDK to 11, as explained at
   \url{https://www.jetbrains.com/help/idea/sdk.html#change-project-sdk}.
 
-\item Change the language level for your project to 8, as explained at
+\item Make sure the language level for your project is 8 or higher, as explained at
 \url{https://www.jetbrains.com/help/idea/project-page.html}.
 
 \item Add the annotated JDK library to the bootclasspath.
