--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -576,6 +576,17 @@ checkers support the following command-line options.
 Each checker may support additional command-line options; see the checker's
 documentation.
 
+To pass an option to only a particular checker,
+prefix the option with the canonical or simple name
+of a checker, separated by an underscore ``\<\_>''.
+Such an option will apply only to a checker with that name or any subclass of that checker.
+For example, you can use
+\begin{Verbatim}
+-ANullnessChecker_lint=redundantNullComparison
+-Aorg.checkerframework.checker.guieffect.GuiEffectChecker_lint=debugSpew
+\end{Verbatim}
+\noindent to pass different lint options to the Nullness and GUI Effect Checkers.
+
 % This list should be kept in sync with file
 % framework/src/main/java/org/checkerframework/framework/source/SourceChecker.java
 
