--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -772,12 +772,12 @@ For information about the extension points, see
 \url{https://youtrack.jetbrains.com/issue/IDEA-159286}.
 
 
-\sectionAndLabel{javac Diagnostics Wrapper}{javac-diagnostics-wrapper}
+\sectionAndLabel{javac diagnostics wrapper}{javac-diagnostics-wrapper}
 
 The \href{https://github.com/eisopux/javac-diagnostics-wrapper}{javac
-diagnostics wrapper} project makes it easy to post-process the javac
-diagnostics output to produce output in different formats, in
-particular in the LSP JSON style.
+diagnostics wrapper} project can post-process the javac
+diagnostics output into other formats, such as
+the LSP (Language Server Protocol) JSON style.
 
 
 \sectionAndLabel{Lombok}{lombok}
