--- a/framework/src/main/java/org/checkerframework/common/returnsreceiver/messages.properties
+++ b/framework/src/main/java/org/checkerframework/common/returnsreceiver/messages.properties
@@ -1,1 +1,1 @@
-invalid.this.location=invalid location for @This annotation
+type.invalid.this.location=invalid location for @This annotation, only usable on method returns and receivers
