--- a/docs/manual/contributors.tex
+++ b/docs/manual/contributors.tex
@@ -66,6 +66,7 @@ Mrigank Arora,
 Nhat Dinh,
 Nhat Nguyen,
 Nikhil Shinde,
+Nima Karimipour,
 Oleg Shchelykalnov,
 Pascal Wittmann,
 Patrick Meiring,
@@ -97,4 +98,5 @@ Vatsal Sura,
 Vlastimil Dort,
 Weitian Xing,
 Werner Dietl,
-Zhiping Cai.
+Zhiping Cai,
+nimakarimipour.
