--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
 Version 3.3.1, May 1, 2020
 
-The Returns Receiver Checker verifies whether a method returns its
-receiver, that is, `this`.
+The Returns Receiver Checker enables documenting and checking that a method
+returns its receiver (i.e., the `this` parameter).
 
 ---------------------------------------------------------------------------
 
